# MemryOS-lite

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  consensus.md  docker-compose.yml  memoryos-lite-design.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
.hermes-loop/: .gitignore  INIT.md  ack.json  blueprint.md  brainstorm.md  config.json  execute_review.md  final_report.md  god_dispatch.json  god_launcher.sh  god_loop_prompt.md  heartbeat.sh  hermes-loop-architecture.html  hermes_hardening.py  hermes_loop.py  hermes_reporter.py  master_blueprint.md  master_config.json  master_slave_status.json  master_slave_status.md  master_state.json  master_status.json  master_status.md  plan.md  plan_final.md  plan_review.md  reflect_phase-0.md  reflect_phase-1.md  reflect_phase-2.md  result.md  spec.md  state.json
.hermes-loop/contracts/: god_dispatch_template.json  master_dispatch_template.json  slave_dispatch_template.json  state_machine.json
.hermes-loop/history/: historical_artifacts_summary_2026-05-24.md  main_loop_phase0_18.json  main_loop_phase0_18.md
.hermes-loop/phases/: README.md
.hermes-loop/prompts/: execute_agent.md  god.md  master_god_prompt.md  plan_agent.md  review_agent.md  slave_god_prompt.md
.hermes-loop/setup/: ALL_WINDOWS.txt  ARCHITECTURE_INTRO.txt  execute_agent_setup.txt  god_setup.txt  plan_agent_setup.txt  review_agent_setup.txt
.hermes-loop/work/: README.md  architecture_blocker_audit_2026-05-24.md  next_action_2026-05-22.md
alembic/: env.py
alembic/versions/: 0001_m2_baseline.py  0002_add_superseded_by.py  0003_add_hnsw_index.py  0003_add_memory_items.py  0004_add_episodes.py  0005_add_core_memory.py  0006_add_archival_memory.py  0007_add_core_block_read_only_tags.py  0008_add_promotion_candidates.py  0009_add_context_policy_candidates.py
docs/: agent-answer-diagnostics.md  agentic-memory-roadmap-zh.md  archive-rag-boundary.md  implementation-history-summary.md  known-issues.md  memory-v3-architecture.md  memory-v3-glossary.md  phase-2.6-results.md  phase-3-results.md  project-handoff.md  public-benchmark-diagnosis.md  source-guide.md  store-interface.md
docs/baseline/: public_m1_locomo_failures_sample.json  public_m1_summary.json  public_m2_summary.json  public_m3_summary.json  public_m3b_summary.json  results.md  summary.json
docs/specs/: memoryos-service-contract.md
scripts/: inject_frontend_vision_proposal.py  inject_frontend_vision_v2.py
tests/: conftest.py  test_agent.py  test_agent_answer_eval.py  test_agent_demo.py  test_agent_kernel.py  test_api.py  test_archival_searcher.py  test_archival_store.py  test_archival_vector.py  test_archive_rag_boundary.py  test_archive_service.py  test_archive_store_protocol.py  test_budget.py  test_cli_agent_answer_eval.py  test_cli_agent_demo.py  test_cli_archive.py  test_compact_trace_and_scope.py  test_config.py  test_conflict.py  test_conflict_adversarial.py  test_conflict_slots.py  test_context_composer.py  test_core_memory_service.py  test_core_memory_store.py  test_derived_cache.py  test_derived_cache_redis_integration.py  test_diagnostic_report.py  test_distribution_profiles.py  test_engine.py  test_episode_retrieval.py  test_episode_store.py  test_evals.py  test_evals_advanced.py  test_evals_hard.py  test_evidence_integration.py  test_evidence_representer.py  test_evidence_searcher.py  test_fe_vision_layer1_api.py  test_fe_vision_layer1_participant_store.py  test_full_memory_contract.py  (+104 more)
xmuse/: .gitignore  CODEX_GOAL_HANDOFF.md  FRONTEND_API.md  FRONTEND_API_INCREMENTAL.md  FRONTEND_CONTEXT.md  FRONTEND_VISION.md  HANDOFF.md  INIT.md  agents.json  auto_discovery.py  bootstrap_gate.sh  chat_api.py  codex_node_launcher.sh  dashboard_api.py  error_knowledge.py  feature_lanes.example.json  feature_lanes.json  gate_profiles.json  god_launcher.sh  hermes_hardening.py  hermes_reporter.py  integrated_test_runner.py  master_blueprint.md  master_config.json  master_loop.py  master_merge_runner.py  master_review_runner.py  master_state.json  master_status.json  master_status.md  mcp_server.py  multi_lane_dispatcher.py  overnight_runner.sh  platform_runner.py  scheduler_monitor.sh  self_evolution_checkpoint.py  self_evolution_runner.py  slave_job_runner.py  start_scheduler_monitor.sh  xmuse_error_knowledge.py  (+1 more)
(+825 files in other folders)
