[project]
name = "memoryos-lite"
version = "0.2.1"
description = "Context-window memory middleware for long-running agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "prometheus-client>=0.25.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.49",
    "tiktoken>=0.12.0",
    "typer>=0.25.1",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
memoryos = "memoryos_lite.cli:app"
memoryos-lite = "memoryos_lite.cli:app"

[project.optional-dependencies]
full-local = [
    "fastembed>=0.8.0",
]
remote = [
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.1",
    "qdrant-client>=1.14.0",
]
benchmark = [
    "memoryos-lite[remote]",
]
redis = [
    "redis>=5.0.0",
]
ray = [
    "ray[default]>=2.55.1",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests that run full eval pipelines (>30s each, deselect with '-m not slow')",
]

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["qdrant_client.*"]
ignore_missing_imports = true
